Resolve MachineLevelUserCloudPolicyBrowserTests issue on Mac

When the EnterpriseStartupDialog is being displayed to block Chrome launching
process. applicationDidFinishLaunching event is fired and creates the
|keep_alive_| instance.

However, if the launch process is aborted by EnterpriseStartupDialog,
|keep_alive_| deletion causes CHECK failure as Chrome is never ready.

Postpone the applicationDidFinishLaunching event until the dialog is closed to avoid the failure.

Bug: 844487
Change-Id: I4e4d8b5a265254c8158d4f9657429a8eba318efa
Reviewed-on: https://chromium-review.googlesource.com/1092075
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Reviewed-by: Julian Pastarmov <pastarmovj@chromium.org>
Commit-Queue: Owen Min <zmin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573726}
Former-commit-id: 0b002e19449048dd96a03aa92b50f96cf27091db