chrome/browser/policy/machine_level_user_cloud_policy_register_watcher.h
@@ -39,6 +39,9 @@ class MachineLevelUserCloudPolicyRegisterWatcher
   MachineLevelUserCloudPolicyController::RegisterResult
   WaitUntilCloudPolicyEnrollmentFinished();
 
+  // Returns whether the dialog is being displayed.
+  bool IsDialogShowing();
+
   void SetDialogCreationCallbackForTesting(DialogCreationCallback callback);
 
  private:
